--- a/src/plugin/components/Message/im-robot/index.less
+++ b/src/plugin/components/Message/im-robot/index.less
@@ -19,7 +19,19 @@
   .u-text-arrow {
       margin-top: 15px;
   }
+  .u-action {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-top: 10px;
+      border-top: 1px solid #EBEDF0;
+  }
+  .u-button {
+      flex: 1;
+      text-align: center;
+  }
 }
+
 .m-message-left {
   .u-text {
       background: #FFFFFF;
